--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Design&mdash;Justin Andre</title>
+  <title>Justin Andre</title>
   <link rel="icon" href="img/icon.ico">
   <link rel="stylesheet" href="/css/master.css">
   <link rel="stylesheet" href="/css/normalize.css">
@@ -24,21 +24,22 @@
   <content>
 
     <section class="splash" id="me">
-      <h4>Website Under Construction</h4>
+      <h4>Available for a full-time role! <a href="mailto:justin.veneracion11@gmail.com?Subject=Job%20Opportunity">Let's Talk!</a></h4>
       <aside class="splashbox">
         <h1>Hi my name is Justin. I am digital designer based in Toronto.
         I design interfaces, conceptualize experiences, and animate motion graphics.
       </h1>
         <!-- <a href="/"> LET'S COLLABORATE</a> -->
       </aside>
+
     </section>
 
     <section class="about">
       <aside class="biography">
         <h4> About Me</h4>
-        <p> My name is Justin Andre Veneracion. I am a graduate of York/Sheridan Design with a passion of digital design focusing on user interface and user experience. My mission is to help kick off big ideas and bring them to life. I believe that design
-          evokes creativity and it shapes human experiences.</p>
-
+          <p>
+            My name is Justin Andre Veneracion. I am a recent graduate of York University / Sheridan’s Bachelor of Design. I have designed user interfaces and experiences, drew illustrations, and everything in between for businesses to help shape their digital projects.
+          </p>
       </aside>
       <aside class="experience">
         <h4>Experience</h4>
@@ -67,6 +68,14 @@
           <li>Brand Identity</li>
           <li>Motion</li>
           <li>Illustration</li>
+        </ul>
+        <h4>Hobbies</h4>
+        <ul>
+          <li>Basketball</li>
+          <li>Photography</li>
+          <li>Code</li>
+          <li>Fashion</li>
+          <li>Travel</li>
         </ul>
       </aside>
     </section>
