--- a/milya.html
+++ b/milya.html
@@ -39,7 +39,8 @@
       <aside class="project-intro-img" id="milya-splash">
       </aside>
       <aside class="project-blockquote">
-        <h1>Connecting Broken families with technology</h1>
+        <h1>A digital home for families separated <br> by long distances.
+</h1>
       </aside>
     </section>
 
@@ -68,7 +69,7 @@
       <aside class="slider-description">
         <h3>Research</h3>
         <h4>General Research</h4>
-        <p>Through interviews, I found out the common issues online shoppers find. These issues were then later filtered to which issues reoccur the most.</p>
+        <p>By gathering academic papers, respectable sources, and interviewing, I was able to collect the most recurring issues of OFW families.</p>
         <h4>Information Architecture</h4>
         <p>From there, features were born based on each problem. An information architecture to map out the features.</p>
         <h4>Persona</h4>
@@ -80,6 +81,32 @@
           <div class="sw-slider" id="milya-research2"> &nbsp;</div>
           <div class="sw-slider" id="milya-research3"> &nbsp; </div>
         </div>
+      </aside>
+    </section>
+
+    <section class="project-sketch">
+      <aside class="sketch-title">
+        <h2>What is Milya?</h2>
+      </aside>
+      <aside class="sketch-box">
+        <div class="owl-carousel owl-theme">
+          <div class="sw-sliderlarge" id="milya-feature1"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="milya-feature2"> &nbsp;</div>
+          <div class="sw-sliderlarge" id="milya-feature3"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="milya-feature4"> &nbsp; </div>
+        </div>
+      </aside>
+      <aside class="sketch-description">
+        <h3>A Family Messenger</h3>
+        <p>Milya’s messenger is build with an idea of serving families separated by long distances. </p>
+      </aside>
+      <aside class="sketch-ideation">
+        <h3>A Bill Tracker & Money Transferer</h3>
+      <p>Manage your bills easily by organising and tracking all your transactions within the app.</p>
+      </aside>
+      <aside class="sketch-itiration">
+        <h3>A Family Hub</h3>
+    <p>Never miss a birthday, a graduation, or your son’s first day of school. Milya has a centralised calendar where all family members can see and edit events.</p>
       </aside>
     </section>
 
@@ -112,9 +139,7 @@
     <section class="project-slider">
       <aside class="slider-description">
         <h3>Sign In</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-
+        <p>Familiar sign up process—Making it easy and recognisable for everyone.</p>
       </aside>
       <aside class="slider-box">
         <div class="owl-carousel owl-theme">
@@ -129,9 +154,10 @@
     <section class="project-slider">
       <aside class="slider-description">
         <h3>Family & Moments</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-
+        <h4>Family</h4>
+        <p>This is where families can organise their accounts and where they can find their files such as: media, books, documents, history, and etc.</p>
+        <h4>Moments</h4>
+        <p>Here, each member of the family can see what’s happening in their lives.</p>
       </aside>
       <aside class="slider-box">
         <div class="owl-carousel owl-theme">
@@ -144,9 +170,9 @@
     <section class="project-slider">
       <aside class="slider-description">
         <h3>Messenger</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Milya’s messenger is built on the idea of capturing the way family members interact with each other.</p>
 
+      <p>Features like sending money and gifts for birthdays and reading bed time stories are just some of the ways Milya can help improve family relationships.</p>
       </aside>
       <aside class="slider-box">
         <div class="owl-carousel owl-theme">
@@ -155,6 +181,7 @@
           <div class="sw-slider" id="milya-msg3"> &nbsp; </div>
           <div class="sw-slider" id="milya-msg4"> &nbsp; </div>
           <div class="sw-slider" id="milya-msg5"> &nbsp; </div>
+          <div class="sw-slider" id="milya-msg6"> &nbsp; </div>
         </div>
       </aside>
     </section>
@@ -162,8 +189,8 @@
     <section class="project-slider">
       <aside class="slider-description">
         <h3>Wallet</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Managing funds is extremely important to a family household. Having to pay for bills could be difficult especially when you are thousands of miles away.</p>
+        <p>With Milya, money management is easier than ever. You can pay for tuition, mortgages, hydro and etc. There’s even an online gift shop where you can buy gift cards and credits and send them to you love ones.</p>
 
       </aside>
       <aside class="slider-box">
