--- a/swish.html
+++ b/swish.html
@@ -46,7 +46,8 @@ everyone wishes for.</h1>
     <section class="project-research">
       <aside class="research-problem">
         <h3>The Challenge</h3>
-        <p>Improving experiences by solving issues related to online shopping.</p>
+        <p>
+          Improving experiences by solving issues related to online shopping.</p>
       </aside>
 
       <aside class="research-inspiration">
@@ -61,6 +62,32 @@ everyone wishes for.</h1>
       <aside class="research-overview">
         <h3>The Future</h3>
         <p>A conceptual design that could potentially be a feature within an existing company like Pinterest.</p>
+      </aside>
+    </section>
+
+    <section class="project-sketch">
+      <aside class="sketch-title">
+        <h2>What is Swish?</h2>
+      </aside>
+      <aside class="sketch-box">
+        <div class="owl-carousel owl-theme">
+          <div class="sw-sliderlarge" id="sw-webex1"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="sw-webex2"> &nbsp;</div>
+          <div class="sw-sliderlarge" id="sw-webex3"> &nbsp; </div>
+        </div>
+      </aside>
+      <aside class="sketch-description">
+        <h3>Saving Products</h3>
+        <p>Log in to a e-store using the email used with Swish. Now whenever you save an item, Swish automatically stores it in your desired wish list.</p>
+      </aside>
+      <aside class="sketch-ideation">
+        <h3>Get Notified</h3>
+        <p>Swish lets you know if there are changes to your saved items. Get notified when an item is low in stock, it goes on sale, a restock and etc. Swish also automatically finds a better deal for you.
+</p>
+      </aside>
+      <aside class="sketch-itiration">
+        <h3>Easy Tracking</h3>
+      <p>Keep track of all your purchases in one list. Also, you can manage your tracking details and preauthorise a safe drop off.</p>
       </aside>
     </section>
 
@@ -94,6 +121,7 @@ These issues were then later filtered to which issues reoccur the most.</p>
         <div class="owl-carousel owl-theme">
           <div class="sw-sliderlarge" id="sw-sketch1">    &nbsp; </div>
           <div class="sw-sliderlarge" id="sw-sketch2">    &nbsp; </div>
+          <div class="sw-sliderlarge" id="sw-sketch3">    &nbsp; </div>
           <div class="sw-sliderlarge" id="sw-wireframe1"> &nbsp; </div>
           <div class="sw-sliderlarge" id="sw-wireframe2"> &nbsp; </div>
           <div class="sw-sliderlarge" id="sw-wireframe3"> &nbsp; </div>
@@ -170,8 +198,8 @@ These issues were then later filtered to which issues reoccur the most.</p>
     <section class="project-slider">
       <aside class="slider-description">
         <h3>Mobile: <br>Delivery</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Tracking purchased online has come along way. But, it’s not the best especially if you have multiple items coming from different places. Swish gathers all your purchased items and complies them into one single list.</p>
+        <p>Missed the delivery again? Swish gives you an option to contact your parcel service provider and preauthorise your items.</p>
 
       </aside>
       <aside class="slider-box">
@@ -183,30 +211,37 @@ These issues were then later filtered to which issues reoccur the most.</p>
       </aside>
     </section>
 
-    <section class="project-sketch">
-      <aside class="sketch-title">
+    <section class="big-window">
+      <aside class="big-window-title">
         <h2>Browser Extension</h2>
       </aside>
-      <aside class="sketch-box">
+      <aside class="big-window-box">
         <div class="owl-carousel owl-theme">
-          <div class="sw-sliderlarge" id="sw-browser3"> &nbsp; </div>
-          <div class="sw-sliderlarge" id="sw-browser1"> &nbsp;</div>
-          <div class="sw-sliderlarge" id="sw-browser2"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="sw-browser3">    &nbsp; </div>
+          <div class="sw-sliderlarge" id="sw-browser1">    &nbsp; </div>
+          <div class="sw-sliderlarge" id="sw-browser2">    &nbsp; </div>
         </div>
       </aside>
-      <aside class="sketch-description">
-        <h3>Sketch</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+    </section>
+
+    <section class="prototype">
+      <aside class="prototype-title">
+        <h1> Prototypes</h1>
       </aside>
-      <aside class="sketch-ideation">
-        <h3>Ideation</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+      <aside class="prototype-box1">
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/264518134" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
       </aside>
-      <aside class="sketch-itiration">
-        <h3>Itiration</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+      <aside class="prototype-box2">
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/263421536" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+      </aside>
+      <aside class="prototype-box3">
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/263421349" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
       </aside>
     </section>
+
 
     <section class="extras">
       <aside class="extras-title">
