--- a/swish.html
+++ b/swish.html
@@ -10,6 +10,18 @@
   <link rel="stylesheet" href="/css/owlcarousel/owl.carousel.min.css">
   <link rel="stylesheet" href="/css/owlcarousel/owl.theme.default.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122111507-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-122111507-1');
+  </script>
+
+
 </head>
 
 <body>
