--- a/index.html
+++ b/index.html
@@ -8,23 +8,20 @@
   <link rel="stylesheet" href="/css/master.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122111507-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-122111507-1');
-</script>
-
-
-
 </head>
 
 <body>
-  <nav>
+
+
+<content>
+<h1>Justin Andre Veneraci&oacute;n</h1>
+<h3>Visual Designer at Ada</h3>
+<p>My website is currently construction</p>
+
+
+</content>
+
+  <!--<nav>
     <aside class="leftnav">
       <a href="#me" class="navlinks scroll">JUSTIN ANDRE</a>
     </aside>
@@ -37,12 +34,13 @@
   <content>
 
     <section class="splash" id="me">
+      <h4>Available for a full-time role! <a href="mailto:justin.veneracion11@gmail.com?Subject=Job%20Opportunity">Let's Talk!</a></h4>
       <aside class="splashbox">
         <h1>Hi my name is Justin. I am digital designer based in Toronto.
         I design interfaces, conceptualize experiences, and animate motion graphics.
       </h1>
         <!-- <a href="/"> LET'S COLLABORATE</a> -->
-      </aside>
+      <!--</aside>
 
     </section>
 
@@ -148,9 +146,9 @@
 
     </section>
 
-  </content>
+  </content>-->
 
-  <footer id="contact">
+  <!--<footer id="contact">
     <content>
       <section class="footer-box">
         <aside class="footnote">
@@ -179,7 +177,7 @@
         </aside>
       </section>
     </content>
-  </footer>
+  </footer>-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
