--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <content>
 <h1>Justin Andre Veneraci&oacute;n</h1>
 <h3>Visual Designer at Ada</h3>
-<p>My website is currently construction</p>
-
+<p>website is currently under construction</p>
+<img src="../img/me.png" class="responsive"></img>
 
 </content>
 
