--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Justin Andre</title>
   <link rel="icon" href="img/icon.ico">
-  <link rel="stylesheet" href="/css/master.css">
+  <link rel="stylesheet" href="css/master.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -13,15 +13,7 @@
 <body>
 
 
-<content>
-<h1>Justin Andre Veneraci&oacute;n</h1>
-<h3>Visual Designer at Ada</h3>
-<p>website is currently under construction</p>
-<img src="../img/me.png" class="responsive"></img>
-
-</content>
-
-  <!--<nav>
+  <nav>
     <aside class="leftnav">
       <a href="#me" class="navlinks scroll">JUSTIN ANDRE</a>
     </aside>
@@ -39,8 +31,8 @@
         <h1>Hi my name is Justin. I am digital designer based in Toronto.
         I design interfaces, conceptualize experiences, and animate motion graphics.
       </h1>
-        <!-- <a href="/"> LET'S COLLABORATE</a> -->
-      <!--</aside>
+        <a href="/"> LET'S COLLABORATE</a>
+      </aside>
 
     </section>
 
@@ -146,9 +138,9 @@
 
     </section>
 
-  </content>-->
+  </content>
 
-  <!--<footer id="contact">
+  <footer id="contact">
     <content>
       <section class="footer-box">
         <aside class="footnote">
@@ -177,7 +169,7 @@
         </aside>
       </section>
     </content>
-  </footer>-->
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
